--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Apply background image only to body or html */
 body, html {
-    background-image: url('./images/serene-forest-nature-images-hd_LRM.jpg'); 
+    background-image: url('./image/serene-forest-nature-images-hd_LRM.jpg'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
@@ -14,7 +14,7 @@ body, html {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(244, 244, 244, 0.8); /* Optional background with transparency */
+    color: antiquewhite;
     padding: 20px;
     text-align: center;
     border-radius: 10px; /* Rounded corners */
